# np-auditor

./: .gitignore  LICENSE  README.md  cursor.md
config/examples/: antigravity-mcp.json  beta-remote-claude-code.json  claude-code-settings.json  claude-desktop.json  cursor-mcp.json
docs/: INDEX.md  actualizaciones.md  api-beta.md  beta-onboarding-tester.md  beta.md  entrenamiento-prompts.md  modelo-uso.md  mvp-plan.md  producto.md  publicacion-diaria.md  telegram-help.txt  uso-terminal.md
docs/install/: AGENT-beta-remote.md  AGENT-operator-local.md  PROMPT-usuario.md  README.md  agent-install-manifest.json  antigravity.md  claude.md  cursor.md  openai.md
manifests/: dims-subset.json  release.json
mcp-server/: README.md  pyproject.toml
mcp-server/src/np_auditor_mcp/: client.py  server.py
scripts/: install-mcp.sh  update.sh
skill/antigravity/: SKILL.md
skill/np-auditor/: SKILL.md
skill/np-router/: SKILL.md
skill/openai/: instructions.md
