[project]
name = "np-auditor-mcp"
version = "0.1.0"
description = "MCP server — NP Auditor (input audit, verify, agent risks)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
]

[project.scripts]
np-auditor-mcp = "np_auditor_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
